--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "jason-guru/laravel-make-repository": "^0.0.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
@@ -38,7 +39,10 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+        "files": [
+             "app/function/function.php"
+         ]
     },
     "autoload-dev": {
         "psr-4": {
